--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.your_second_eyes">
+
+    <queries>
+        <intent>
+             <action android:name="android.intent.action.TTS_SERVICE"/>
+        </intent>
+    </queries>
+
    <application
         android:label="your_second_eyes"
         android:name="${applicationName}"
