--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
              <action android:name="android.intent.action.TTS_SERVICE"/>
         </intent>
     </queries>
-
+    
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
    <application
         android:label="your_second_eyes"
         android:name="${applicationName}"
