--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_tts: ^3.6.1
+  speech_to_text: ^6.1.0
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
