add selection screen, edit scan screen

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="your_second_eyes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
