--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_tts: ^3.6.1
   speech_to_text: ^6.1.0
   avatar_glow: ^2.0.2
+  image_picker: ^0.8.6
+  google_ml_kit: ^0.13.0
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
