--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.6
   google_ml_kit: ^0.13.0
   font_awesome_flutter: ^10.2.1
+  firebase_core: ^2.4.0
 
 dev_dependencies:
   flutter_test:
